# University

1Y_PROG/bets/: bets.cpp  bets.h
1Y_PROG/key/: key.cpp  key.h
1Y_PROG/players/: players.cpp  players.h
1Y_PROG/winners/: winners.cpp  winners.h
3Y_COMP/: README-PT.txt  projeto.jjt
3Y_COMP/src/: Main.scala
3Y_COMP/src/invariant/: Invariant.scala  InvariantDouble.scala
4Y_LGP/api/: README.md  cache.sh  composer.json
4Y_LGP/api/app/: AppKernel.php  autoload.php
4Y_LGP/app/: .gitignore  README.md  clientkeystore
4Y_LGP/app/app/: build.gradle  proguard-rules.pro
4Y_LGP/app/lgp/: TrackingData_MarkerlessFast.xml  info.js  logic.js
4Y_LGP/app/metaioSDK/: build.gradle
4Y_LGP/cms/: .gitignore  Gruntfile.js  README.md  bower.json  index.html  package.json
4Y_LGP/cms/js/: app.js  app.js~
4Y_LGP/cms/partials/: admin.html  channel.html  login.html  messages.html  navbar.html  new_channel.html  new_scene.html  new_trackable.html  topbar.html
4Y_LGP/cms/scss/: main.scss
4Y_PPRO/frontend/: .gitignore  Gruntfile.js  bower.json  index.html  package.json
4Y_PPRO/frontend/js/: app.js  index.js
4Y_PPRO/frontend/partials/: error.html  home.html  login.html  navbar.html  news.html
4Y_PPRO/frontend/scss/: main.scss
4Y_PPRO/sorting/: CMakeLists.txt  README.md  config.h  log.h  main.c
4Y_TDIN/TDIN_PROJ_1/: readme.txt
5Y_ECAC/: .gitignore  Loader.R
5Y_ECAC/Classification/: AllData.ioo  AllData.md  AllData.properties  BigData.ioo  BigData.md  BigData.properties  DecisionTree.properties  DecisionTree.rmp
5Y_ECAC/Data/: banking-transaction-test.csv
(+403 files in other folders)
